# srKasse

./: .env.example  .gitignore  Draft a minimal srKasse FastAPI repo layout (files.md  README.md  alembic.ini  pyproject.toml  skus.db  sr-sku-gen.py
alembic/: env.py
alembic/versions/: 001_initial_tenants_users_products.py  002_products_skus_schema_and_counters.py
app/: __init__.py  main.py
app/core/: __init__.py  config.py  security.py  sku_maps.py  tenant.py
app/db/: __init__.py  base.py  init_db.py  session.py
app/models/: __init__.py  product.py  product_counter.py  tenant.py  user.py
app/routers/: __init__.py  auth.py  products.py  tenants.py  users.py
app/schemas/: __init__.py  auth.py  product.py  tenant.py  user.py
app/services/: __init__.py  product_service.py  tenant_service.py  user_service.py
app/static/: README.txt
scripts/: __init__.py  seed_products_from_skus_db.py
tests/: __init__.py  conftest.py  test_health.py  test_multitenant_products.py
